data/derived/sp14/progs/unify/prog0130.ml.out
Characters 30-39:
  let _ = myFunc (fun x y -> x) [1;2;3;4];;
                                ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
